<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:fontFamily="@font/googlesans_17pt_semibold"
        android:paddingLeft="20dp"
        android:text="@string/tagline0"
        android:textColor="@color/bright_green"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/googlesans_17pt_semibold"
        android:paddingLeft="20dp"
        android:text="@string/tagline0.1"
        android:textSize="40dp"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline1"
        android:textSize="30sp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        tools:ignore="DuplicateIds" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline2"
        android:textSize="50sp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:textColor="@color/bright_green"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline4"
        android:paddingEnd="5dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:paddingStart="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:srcCompat="@drawable/img"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:backgroundTint="@color/green"/>
    </LinearLayout>
</LinearLayout>